<resources>
    <string name="app_name">Quiz App</string>
    <string name="welcome_message">Welcome to Quiz App!</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="select_category">Select Category</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="submit">Submit</string>
    <string name="play_again">Play Again</string>
    <string name="go_home">Go Home</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="results">Results</string>
    <string name="quiz">Quiz</string>
    <string name="default_web_client_id">Your_Web_Client_ID_From_Firebase</string>
    <string name="time_left">Time left: %d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>