<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/start_quiz_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/start_quiz"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_category"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <RadioGroup
            android:id="@+id/categories_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_difficulty"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <RadioGroup
            android:id="@+id/difficulty_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/easy_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/easy"/>

            <RadioButton
                android:id="@+id/medium_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medium"/>

            <RadioButton
                android:id="@+id/hard_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hard"/>
        </RadioGroup>

    </LinearLayout>
</ScrollView>